fixes to mission dark mode

--- a/mission/styles.css
+++ b/mission/styles.css
@@ -34,3 +34,12 @@ img {
     display: block;
     margin: 30px auto;
 }
+
+body.dark {
+    background-color: black;
+    color: white;
+}
+
+body.dark p {
+    color: white;
+}
